# Tickr

./: Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: install.ps1  install.sh
src/: cli.rs  color.rs  event.rs  main.rs  tui.rs  types.rs  updater.rs
src/app/: mod.rs  state.rs
src/db/: category.rs  intervals.rs  migrations.rs  mod.rs  project.rs  tickr.rs
src/ui/: categories.rs  dashboard.rs  detail.rs  help.rs  helpers.rs  mod.rs  projects.rs  theme.rs  tickrs.rs  timeline.rs
