[package]
name = "tickr"
version = "0.1.0"
edition = "2021"
description = "Tickr - A terminal-based time tracker"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
clap = { version = "4.5", features = ["derive"] }
rand = "0.10.0"
self_update = { version = "0.41", features = ["archive-tar", "compression-flate2"] }
